# 2.5DThermometryReconstruction

./: .gitignore  README.md
cmake/: CMakeLists.txt  template.vcxproj.user.in
include/: CoordinatesConverter.h  DataVolume.h  DicomHandler.h  InterpolationMap.h  NecrosisMapComputation.h  ThermometryReconstruction.h
sources/: CoordinatesConverter.cpp  DataVolume.cpp  DicomHandler.cpp  InterpolationMap.cpp  NecrosisMapComputation.cpp  ThermometryReconstruction.cpp  ThermometryReconstruction.ui  main.cpp
